--- a/src/main/webapp/WEB-INF/views/cadastro-efetuado.html
+++ b/src/main/webapp/WEB-INF/views/cadastro-efetuado.html
@@ -15,13 +15,30 @@
         .container {
             text-align: center;
         }
+        
+        .button-redirect {
+        	width: 100%;
+	        padding: 10px;
+	        margin: 8px 0;
+	        border: 1px solid #ccc;
+	        border-radius: 4px;
+	        box-sizing: border-box;
+	        background-color: rgb(227, 68, 50);
+	        color: rgb(255, 255, 255);
+	        cursor: pointer;
+        }
+        
+        .button-redirect:hover {
+	        background-color: rgb(207, 53, 32, 1);
+	    }
+           
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Cadastro Efetuado com Sucesso!</h1>
-        <p>O seu cadastro foi realizado com sucesso. Agora você pode fazer login.</p>
-        <button onclick="redirectLoginPage()">Ir para a Página de Login</button>
+        <p class="paragrafo-ok">O seu cadastro foi realizado com sucesso. Agora você pode fazer login.</p>
+        <button class="button-redirect" onclick="redirectLoginPage()">Ir para a Página de Login</button>
     </div>
 
     <script>
