--- a/src/main/webapp/WEB-INF/views/erro404.html
+++ b/src/main/webapp/WEB-INF/views/erro404.html
@@ -9,7 +9,7 @@
 		    margin: 0;
 		    padding: 0;
 		    font-family: Arial, sans-serif;
-		     background-color: #f2f2f2;
+		    background-color: rgb(254, 253, 252);
 		}
 		
 		.container {
@@ -23,12 +23,12 @@
 		h1 {
 		    font-size: 48px;
 		    margin-bottom: 10px;
-		    color: #333;
+		    color: rgb(227, 68, 50);
 		}
 		
 		p {
 		    font-size: 24px;
-		    color: #666;
+		    color: #333;
 		}
 		
 		a {
@@ -41,8 +41,8 @@
 <body>
     <div class="container">
         <h1>Erro 404</h1>
-        <p>Página não encontrada</p>
-        <a href="http://localhost:8080/task-manager/home?path=signIn">voltar à página inicial</a>
+        <p>Página não encontrada!</p>
+        <a href="http://localhost:8080/task-manager/home?path=signIn">Voltar à página inicial.</a>
     </div>
 </body>
 </html>
