--- a/src/main/webapp/WEB-INF/views/cadastro-efetuado.html
+++ b/src/main/webapp/WEB-INF/views/cadastro-efetuado.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Efetuado com Sucesso</title>
     <style>
+    
         html, body {
             height: 100%;
             margin: 0;
@@ -16,6 +17,10 @@
             text-align: center;
         }
         
+        .container h1 {
+        	color: rgb(227, 68, 50);
+        }
+          
         .button-redirect {
         	width: 100%;
 	        padding: 10px;
